--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,8 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/Maps/sandbox_test.sandbox_test
 GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+GlobalDefaultGameMode=/Game/Blueprints/GameModeBP.GameModeBP_C
+bUseSplitscreen=False
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/DowntownBeatdown")
@@ -22,4 +24,3 @@ r.TessellationAdaptivePixelsPerTriangle=32.000000
 r.CustomDepth=0
 r.CustomDepthTemporalAAJitter=False
 r.ForwardShading=True
-
