--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/sandbox_test.sandbox_test
+EditorStartupMap=/Game/Blueprints/Menu/MainMenu.MainMenu
 GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
 GlobalDefaultGameMode=/Game/Blueprints/GameModeBP.GameModeBP_C
 bUseSplitscreen=False
@@ -24,4 +24,3 @@ r.TessellationAdaptivePixelsPerTriangle=32.000000
 r.CustomDepth=0
 r.CustomDepthTemporalAAJitter=False
 r.ForwardShading=True
-
